# ritamos

./: .gitignore  Makefile  README.md
apps/hello/: Makefile  hello.c
apps/init/: CMakeLists.txt  init
apps/init/include/: init.h  process.h
apps/init/src/: banner.c  console.c  filesystem.c  hostname.c  logger.c  main.c  mount.c  network.c  process.c  services.c  waitforever.c
apps/ritamos-session/etc/xdg/weston/: weston.ini
configs/buildroot-config/: defconfig
configs/kernel/: qemu_defconfig
docker/: Dockerfile
scripts/: docker_run.sh  env.mk  install.sh  rootfs.sh  run-console.sh  run-gui.sh  run.sh
